--- a/test/test_read_data.ipynb
+++ b/test/test_read_data.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
        "0  2017-12-03 08:41:42.057563      0-999           v1  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
        "[1000 rows x 12 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +777,7 @@
        "  'album_name': 'Boys Like Girls'}]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -797,18 +797,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'access_token': 'BQCQ3T5yFpwdhyqRxweDnkFCiNSi8m4TOczTW4OyAM3k8G4a5_8WSHfNp63QJwL1FVBgrP9S6pAWvrLplRKRQzbcatQX9HhNL5fYVkuebwdIx0vsf9Q',\n",
+       "{'access_token': 'BQDtcLRPpGrbaqbTCKSPiyn4BwtudvTwIJWBEOeJvMxr42pilPDX3DFkoLCs9UTmHClZ0aTvLA02c1b7ikAQGZjksp5jnGkj8Kreu1UOBSrLdZnQkic',\n",
        " 'token_type': 'Bearer',\n",
        " 'expires_in': 3600}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,16 +827,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'BQCQ3T5yFpwdhyqRxweDnkFCiNSi8m4TOczTW4OyAM3k8G4a5_8WSHfNp63QJwL1FVBgrP9S6pAWvrLplRKRQzbcatQX9HhNL5fYVkuebwdIx0vsf9Q'"
+       "'BQDtcLRPpGrbaqbTCKSPiyn4BwtudvTwIJWBEOeJvMxr42pilPDX3DFkoLCs9UTmHClZ0aTvLA02c1b7ikAQGZjksp5jnGkj8Kreu1UOBSrLdZnQkic'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,33 +855,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'danceability': 0.564,\n",
-       " 'energy': 0.262,\n",
-       " 'key': 11,\n",
-       " 'loudness': -18.329,\n",
-       " 'mode': 0,\n",
-       " 'speechiness': 0.0311,\n",
-       " 'acousticness': 0.901,\n",
-       " 'instrumentalness': 0.00364,\n",
-       " 'liveness': 0.152,\n",
-       " 'valence': 0.471,\n",
-       " 'tempo': 127.976,\n",
-       " 'type': 'audio_features',\n",
-       " 'id': '1Rb41NEaZJWv6ihFvm9dwX',\n",
-       " 'uri': 'spotify:track:1Rb41NEaZJWv6ihFvm9dwX',\n",
-       " 'track_href': 'https://api.spotify.com/v1/tracks/1Rb41NEaZJWv6ihFvm9dwX',\n",
-       " 'analysis_url': 'https://api.spotify.com/v1/audio-analysis/1Rb41NEaZJWv6ihFvm9dwX',\n",
-       " 'duration_ms': 216120,\n",
-       " 'time_signature': 3}"
+       "{'error': {'status': 429}}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -897,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -921,73 +904,24 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>danceability</th>\n",
-       "      <th>energy</th>\n",
-       "      <th>key</th>\n",
-       "      <th>loudness</th>\n",
-       "      <th>mode</th>\n",
-       "      <th>speechiness</th>\n",
-       "      <th>acousticness</th>\n",
-       "      <th>instrumentalness</th>\n",
-       "      <th>liveness</th>\n",
-       "      <th>valence</th>\n",
-       "      <th>tempo</th>\n",
-       "      <th>type</th>\n",
-       "      <th>id</th>\n",
-       "      <th>uri</th>\n",
-       "      <th>track_href</th>\n",
-       "      <th>analysis_url</th>\n",
-       "      <th>duration_ms</th>\n",
-       "      <th>time_signature</th>\n",
+       "      <th>error.status</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.564</td>\n",
-       "      <td>0.262</td>\n",
-       "      <td>11</td>\n",
-       "      <td>-18.329</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0311</td>\n",
-       "      <td>0.901</td>\n",
-       "      <td>0.00364</td>\n",
-       "      <td>0.152</td>\n",
-       "      <td>0.471</td>\n",
-       "      <td>127.976</td>\n",
-       "      <td>audio_features</td>\n",
-       "      <td>1Rb41NEaZJWv6ihFvm9dwX</td>\n",
-       "      <td>spotify:track:1Rb41NEaZJWv6ihFvm9dwX</td>\n",
-       "      <td>https://api.spotify.com/v1/tracks/1Rb41NEaZJWv...</td>\n",
-       "      <td>https://api.spotify.com/v1/audio-analysis/1Rb4...</td>\n",
-       "      <td>216120</td>\n",
-       "      <td>3</td>\n",
+       "      <td>429</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   danceability  energy  key  loudness  mode  speechiness  acousticness   \n",
-       "0         0.564   0.262   11   -18.329     0       0.0311         0.901  \\\n",
-       "\n",
-       "   instrumentalness  liveness  valence    tempo            type   \n",
-       "0           0.00364     0.152    0.471  127.976  audio_features  \\\n",
-       "\n",
-       "                       id                                   uri   \n",
-       "0  1Rb41NEaZJWv6ihFvm9dwX  spotify:track:1Rb41NEaZJWv6ihFvm9dwX  \\\n",
-       "\n",
-       "                                          track_href   \n",
-       "0  https://api.spotify.com/v1/tracks/1Rb41NEaZJWv...  \\\n",
-       "\n",
-       "                                        analysis_url  duration_ms   \n",
-       "0  https://api.spotify.com/v1/audio-analysis/1Rb4...       216120  \\\n",
-       "\n",
-       "   time_signature  \n",
-       "0               3  "
+       "   error.status\n",
+       "0           429"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
