--- a/test/get_audio_feats.ipynb
+++ b/test/get_audio_feats.ipynb
@@ -10,7 +10,9 @@
     "import requests\n",
     "import spotipy\n",
     "from spotipy.oauth2 import SpotifyClientCredentials\n",
-    "import time\n"
+    "import time\n",
+    "from dotenv import load_dotenv\n",
+    "import os"
    ]
   },
   {
@@ -1974,12 +1976,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'3be9acd2dbcb4943b4573e5659d7f6ba'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "client_id = \"3be9acd2dbcb4943b4573e5659d7f6ba\"\n",
-    "client_secret = \"53e274002b594989858aa743b4e81fc3\""
+    "client_id = os.getenv(\"CLIENT_ID\")\n",
+    "client_secret = os.getenv(\"CLIENT_SECRET\")"
    ]
   },
   {
