fix invalid track

--- a/test/get_audio_feats.ipynb
+++ b/test/get_audio_feats.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "2262292"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1958,7 +1958,7 @@
        " ...}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1976,7 +1976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1985,7 +1985,7 @@
        "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1996,7 +1996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2006,13 +2006,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[None]"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cli_credentials_manager = SpotifyClientCredentials(client_id=client_id, client_secret=client_secret)\n",
     "sp = spotipy.Spotify(client_credentials_manager=cli_credentials_manager)\n",
-    "# sp.audio_features(\"6I9VzXrHxO9rA9A5euc8Ak\")\n"
+    "sp.audio_features(\"644qZVMUMsj2UkVPITKtwV\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "invalid_tracks = []"
    ]
   },
   {
@@ -2024,7 +2044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2033,6 +2053,11 @@
     "    feature_list = sp.audio_features(batch_ids)\n",
     "    \n",
     "    for i, feats in enumerate(feature_list, start=0):\n",
+    "        if (feats is None):\n",
+    "            invalid_tracks.append(batch_ids[i])\n",
+    "            print(f\"Track with ID {batch_ids[i]}'s features is None\")\n",
+    "            continue\n",
+    "        \n",
     "        id = batch_ids[i]\n",
     "        for feat in unneccesary_feats: # Remove unnecessary features\n",
     "            feats.pop(feat)\n",
@@ -2053,36 +2078,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "keys = list(track_infos.keys())\n",
-    "\n",
-    "# i = 0\n",
-    "\n",
-    "# max_size = len(track_infos)\n",
-    "# while (i < max_size):\n",
-    "#     start_idx = i\n",
-    "#     end_idx = i + 100\n",
-    "\n",
-    "#     if (end_idx >= max_size):\n",
-    "#         end_idx = max_size - 1\n",
-    "\n",
-    "#     batch = keys[start_idx : end_idx]\n",
-    "\n",
-    "#     get_and_update_feats(batch)\n",
-    "#     time.sleep(2)\n",
-    "#     # print(end_idx)\n",
-    "\n",
-    "#     i += 100\n",
-    "#     # print(end_idx)\n",
-    "\n"
+    "keys = list(track_infos.keys())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- update original batch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2110,38 +2122,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "644qZVMUMsj2UkVPITKtwV\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "{'artist_name': '12 Fingers',\n",
-       " 'track_name': 'Girassol - 12 Fingers Club Vocal',\n",
-       " 'audio_feats': {'danceability': 0.797,\n",
-       "  'energy': 0.719,\n",
-       "  'key': 7,\n",
-       "  'loudness': -7.576,\n",
-       "  'mode': 1,\n",
-       "  'speechiness': 0.0597,\n",
-       "  'acousticness': 0.000906,\n",
-       "  'instrumentalness': 0.422,\n",
-       "  'liveness': 0.0256,\n",
-       "  'valence': 0.672,\n",
-       "  'tempo': 126.007,\n",
-       "  'duration_ms': 446360,\n",
-       "  'time_signature': 4}}"
+       "{'artist_name': 'Key Tronics Ensemble', 'track_name': 'Anamaria'}"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "k_temps = list(keys)\n",
-    "\n",
-    "track_infos[k_temps[1697066]]"
+    "print(k_temps[1697067])\n",
+    "track_infos[k_temps[1697067]]"
    ]
   },
   {
@@ -2153,7 +2158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -2163,20 +2168,10 @@
       "Current tracks updated: 1696709\n",
       "Current tracks updated: 1696809\n",
       "Current tracks updated: 1696909\n",
-      "Current tracks updated: 1697009\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'pop'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[12], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m start_index \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnter start index to split: \u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[0;32m      2\u001b[0m end_index \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnter end index to split: \u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[1;32m----> 3\u001b[0m \u001b[43mupdate_with_batch\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstart_index\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mend_index\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkeys\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[9], line 14\u001b[0m, in \u001b[0;36mupdate_with_batch\u001b[1;34m(start_index, end_index, keys, batch_size)\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[38;5;66;03m# print(\"Here: \", i)\u001b[39;00m\n\u001b[0;32m     12\u001b[0m batch \u001b[38;5;241m=\u001b[39m keys[i:i\u001b[38;5;241m+\u001b[39mbatch_size]\n\u001b[1;32m---> 14\u001b[0m \u001b[43mget_and_update_feats\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbatch\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     15\u001b[0m time\u001b[38;5;241m.\u001b[39msleep(\u001b[38;5;241m2\u001b[39m)\n\u001b[0;32m     17\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (i \u001b[38;5;241m==\u001b[39m end_index \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m):\n",
-      "Cell \u001b[1;32mIn[7], line 8\u001b[0m, in \u001b[0;36mget_and_update_feats\u001b[1;34m(batch_ids)\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28mid\u001b[39m \u001b[38;5;241m=\u001b[39m batch_ids[i]\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m feat \u001b[38;5;129;01min\u001b[39;00m unneccesary_feats: \u001b[38;5;66;03m# Remove unnecessary features\u001b[39;00m\n\u001b[1;32m----> 8\u001b[0m     \u001b[43mfeats\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpop\u001b[49m(feat)\n\u001b[0;32m     10\u001b[0m temp \u001b[38;5;241m=\u001b[39m {\n\u001b[0;32m     11\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124maudio_feats\u001b[39m\u001b[38;5;124m\"\u001b[39m:feats\n\u001b[0;32m     12\u001b[0m }\n\u001b[0;32m     14\u001b[0m track_infos[\u001b[38;5;28mid\u001b[39m]\u001b[38;5;241m.\u001b[39mupdate(temp)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'pop'"
+      "Current tracks updated: 1697009\n",
+      "Track with ID 644qZVMUMsj2UkVPITKtwV's features is None\n",
+      "Current tracks updated: 1697109\n",
+      "Current tracks updated: 1697209\n"
      ]
     }
    ],
@@ -2188,7 +2183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2197,6 +2192,8 @@
     "    temp = dict()\n",
     "\n",
     "    for i in range(start_index, end_index):\n",
+    "        if (keys[i] in invalid_tracks):\n",
+    "            continue\n",
     "        temp[keys[i]] = track_infos[keys[i]]\n",
     "\n",
     "    return temp"
@@ -2204,7 +2201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
