--- a/test/get_audio_feats.ipynb
+++ b/test/get_audio_feats.ipynb
@@ -2142,12 +2142,7 @@
     "\n",
     "\n",
     "        batch = keys[i:i+batch_size]\n",
-    "\n",
-    "        res = get_and_update_feats(batch)\n",
-    "        if (res is None):\n",
-    "            current_track = i\n",
-    "            print(f\"Edited tracks: {current_track}\")\n",
-    "            break\n",
+    "        get_and_update_feats(batch)\n",
     "        \n",
     "        time.sleep(2)\n",
     "\n",
