--- a/backend/convert_csv.ipynb
+++ b/backend/convert_csv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,40 +14,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['track_infos_0_88099.pickle',\n",
-       " 'track_infos_1530135_1552034.pickle',\n",
-       " 'track_infos_1696709_1846709.pickle',\n",
-       " 'track_infos_1846710_1996710.pickle',\n",
-       " 'track_infos_188199_287999.pickle',\n",
-       " 'track_infos_1996711_2046511.pickle',\n",
-       " 'track_infos_288000_388000.pickle',\n",
-       " 'track_infos_388000_488099.pickle',\n",
-       " 'track_infos_488100_565670.pickle',\n",
-       " 'track_infos_565573_665573.pickle',\n",
-       " 'track_infos_665574_765274.pickle',\n",
-       " 'track_infos_765275_865275.pickle',\n",
-       " 'track_infos_88100_188198.pickle']"
+       "['track_infos_2046512_2196512.pickle', 'track_infos_2196513_2246213.pickle']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pickle_files = os.listdir(\"./pickles\")\n",
+    "# pickle_files = os.listdir(\"./pickles\")\n",
+    "pickle_files = [\"track_infos_2046512_2196512.pickle\", \"track_infos_2196513_2246213.pickle\"]\n",
     "pickle_files"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +63,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +85,7 @@
        "array([1, 2, 3, 4])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,6 +127,13 @@
     "\n",
     "csv_dump()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
