update parallel computing

--- a/backend/cosine_similarty_algorithm.ipynb
+++ b/backend/cosine_similarty_algorithm.ipynb
@@ -294,6 +294,98 @@
     "Sử dụng KDtree mất khoảng 19.2s\n",
     "Sử dụng Faiss mất khoảng 0.67s"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Tính toán song song\n",
+    "import faiss\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from joblib import Parallel, delayed\n",
+    "\n",
+    "\n",
+    "def cosine_similarity(a, b):\n",
+    "    dot_product = np.dot(a, b)\n",
+    "    norm_a = np.linalg.norm(a)\n",
+    "    norm_b = np.linalg.norm(b)\n",
+    "    similarity = dot_product / (norm_a * norm_b)\n",
+    "    return similarity\n",
+    "\n",
+    "\n",
+    "def get_closest(vector_input: np.array, df: pd.DataFrame):\n",
+    "    # Chuẩn hóa các vector thành độ dài 1\n",
+    "    normalized_input = vector_input / np.linalg.norm(vector_input)\n",
+    "    normalized_compare = df.values / np.linalg.norm(df.values, axis=1)[:, np.newaxis]\n",
+    "\n",
+    "    # Xây dựng chỉ số Faiss\n",
+    "    index = faiss.IndexFlatIP(df.values.shape[1])  # vector_compare.shape[1] là số chiều của vector\n",
+    "    index.add(normalized_compare)\n",
+    "\n",
+    "    num_neighbors = 10  # Số lượng hàng xóm gần nhất cần tìm\n",
+    "\n",
+    "    # Tìm kiếm hàng xóm gần nhất\n",
+    "    distances, indices = index.search(np.array([normalized_input]), k=num_neighbors)\n",
+    "\n",
+    "    # Tính toán cosine similarity song song\n",
+    "    similarities = Parallel(n_jobs=-1)(\n",
+    "        delayed(cosine_similarity)(normalized_input, normalized_compare[i])\n",
+    "        for i in indices[0]\n",
+    "    )\n",
+    "\n",
+    "    return similarities, indices[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([0.34218933381745636,\n",
+       "  0.3376605064460142,\n",
+       "  0.33705913130868465,\n",
+       "  0.3358309466584777,\n",
+       "  0.33527855190250794,\n",
+       "  0.33527855190250794,\n",
+       "  0.33527855190250794,\n",
+       "  0.33527855190250794,\n",
+       "  0.33527855190250794,\n",
+       "  0.33523866689620824],\n",
+       " array([1573409, 1051996, 1280782, 2031104,  542759,  413075,  257965,\n",
+       "         257964,  108135, 1066246], dtype=int64))"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_closest(input_vector, df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "446 ms ± 28 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit get_closest(input_vector, df)"
+   ]
   }
  ],
  "metadata": {
