--- a/backend/similarity_search.ipynb
+++ b/backend/similarity_search.ipynb
@@ -1159,16 +1159,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(16378,)"
+       "array(['0hkxAENNrJ18AzHqync5n3', '3eze1OsZ1rqeXkKStNfTmi',\n",
+       "       '5tsI3xxDHDgzHhn30LTQNz', ..., '2Ttgv5kpXX4dKvtyhKXNbv',\n",
+       "       '61OLOsYMI9PuUftr0muz28', '18o37lczunBF67BRPMBO64'], dtype=object)"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1176,40 +1178,41 @@
    "source": [
     "group = processed_train[Y.to_numpy() == pred]\n",
     "group_ID = df[\"ID\"].to_numpy()[Y.to_numpy() == pred]\n",
-    "group_ID.shape"
+    "group_ID"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
     "dist, indx = get_top10_neighborest(temp, group)\n",
     "dist2, indx2 = get_closest(temp, group)\n",
-    "dist3 = cdist([temp], group, \"cosine\")"
+    "dist3 = cdist([temp], group, metric=\"cosine\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([   0, 5296, 4451, ..., 4481, 4800,  258], dtype=int64)"
+       "(array([[1.11022302e-16, 4.00426661e-06, 1.06983968e-05, ...,\n",
+       "         2.12818119e-01, 2.17459897e-01, 2.19018252e-01]]),\n",
+       " array([   0, 5296, 4451, ..., 4481, 4800,  258], dtype=int64))"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dist3\n",
-    "indx3 = np.argsort(dist3, order=).flatten()\n",
-    "indx3"
+    "indx3 = np.argsort(dist3).flatten()\n",
+    "np.sort(dist3), indx3"
    ]
   },
   {
@@ -1335,31 +1338,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['0UaMYEvWZi0ZqiDOoHU3YI',\n",
-       " '2ZdCrBA52bb4pIG3tOOZiQ',\n",
-       " '5LrNrRA8sMvhKRPOkuvpwq',\n",
-       " '5z5RJbZqDRYOgaMU6RetVk',\n",
-       " '3Bhnf6fhi3m28ibUJZepSh',\n",
-       " '0H6fDB7YaMZe1rXCmATx9l',\n",
-       " '01a0J96fRD91VnjQQUCqMK',\n",
-       " '2jsFRGqg1tLH3J6UFiR1Bc',\n",
-       " '437h9GRi70A1BzMzh4cyra',\n",
-       " '3ZJb4Qn1TvHx3HW08YLmTR']"
+       "['0hkxAENNrJ18AzHqync5n3',\n",
+       " '6I0VTz6ZM9baTiF7tmQiSo',\n",
+       " '0c2JAT3kHR10OtP6Fo6Gsp',\n",
+       " '2WEkcN2px48oY4H6hsKkWm',\n",
+       " '0FKzmqTBCJpFLeHexdUrf5',\n",
+       " '7H5gjcPW0sM6LnwRl0wW12',\n",
+       " '2EMQMhtArm8keUpQw81KrX',\n",
+       " '0I0X4crb43LYAeSEIN9sSA',\n",
+       " '3zxqeUdFVsmDQymkkN96Im',\n",
+       " '54Ax1ooNyhTER5bR2JmzqG']"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rcm_ID3 = [id for id in df[\"ID\"][indx3]]\n",
+    "rcm_ID3 = [id for id in group_ID[indx3]]\n",
     "rcm_ID3[:10]"
    ]
   },
