--- a/backend/similarity_search.ipynb
+++ b/backend/similarity_search.ipynb
@@ -467,7 +467,7 @@
    ],
    "source": [
     "df = pd.read_csv(\"./processed_data.csv\").iloc[:, 1:]\n",
-    "df\n"
+    "df"
    ]
   },
   {
@@ -1075,9 +1075,30 @@
    ],
    "source": [
     "input_vector = continuous_data.iloc[192]\n",
-    "input_vector\n",
     "input_id = df[\"ID\"].iloc[192]\n",
     "input_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 6.89000e-01,  2.68000e-01, -1.57220e+01,  5.05000e-01,\n",
+       "        9.23000e-01,  1.69000e-06,  3.10000e-01,  5.69000e-01,\n",
+       "        1.21202e+02,  9.10630e+04])"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input_vector.to_numpy()\n"
    ]
   },
   {
@@ -1189,7 +1210,8 @@
    "source": [
     "dist, indx = get_top10_neighborest(temp, group)\n",
     "dist2, indx2 = get_closest(temp, group)\n",
-    "dist3 = cdist([temp], group, metric=\"cosine\")"
+    "dist3 = cdist([temp], group, metric=\"cosine\")\n",
+    "indx3 = np.argsort(dist3).flatten()\n"
    ]
   },
   {
@@ -1211,7 +1233,6 @@
     }
    ],
    "source": [
-    "indx3 = np.argsort(dist3).flatten()\n",
     "np.sort(dist3), indx3"
    ]
   },
@@ -1237,6 +1258,28 @@
    ],
    "source": [
     "dist2, indx2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dupp_idx = np.where(dist2[0] == 0)[0]\n",
+    "# np.delete(indx2, dupp_idx)\n",
+    "len(dupp_idx)"
    ]
   },
   {
