--- a/backend/test/get_audio_feats.ipynb
+++ b/backend/test/get_audio_feats.ipynb
@@ -1997,7 +1997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2007,16 +2007,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[None]"
+       "[{'danceability': 0.904,\n",
+       "  'energy': 0.813,\n",
+       "  'key': 4,\n",
+       "  'loudness': -7.105,\n",
+       "  'mode': 0,\n",
+       "  'speechiness': 0.121,\n",
+       "  'acousticness': 0.0311,\n",
+       "  'instrumentalness': 0.00697,\n",
+       "  'liveness': 0.0471,\n",
+       "  'valence': 0.81,\n",
+       "  'tempo': 125.461,\n",
+       "  'type': 'audio_features',\n",
+       "  'id': '0UaMYEvWZi0ZqiDOoHU3YI',\n",
+       "  'uri': 'spotify:track:0UaMYEvWZi0ZqiDOoHU3YI',\n",
+       "  'track_href': 'https://api.spotify.com/v1/tracks/0UaMYEvWZi0ZqiDOoHU3YI',\n",
+       "  'analysis_url': 'https://api.spotify.com/v1/audio-analysis/0UaMYEvWZi0ZqiDOoHU3YI',\n",
+       "  'duration_ms': 226864,\n",
+       "  'time_signature': 4}]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2024,7 +2041,7 @@
    "source": [
     "cli_credentials_manager = SpotifyClientCredentials(client_id=client_id, client_secret=client_secret)\n",
     "sp = spotipy.Spotify(client_credentials_manager=cli_credentials_manager)\n",
-    "sp.audio_features(\"644qZVMUMsj2UkVPITKtwV\")\n"
+    "sp.audio_features(\"0UaMYEvWZi0ZqiDOoHU3YI\")\n"
    ]
   },
   {
