--- a/backend/similarity_search.ipynb
+++ b/backend/similarity_search.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
        "[2149378 rows x 17 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +762,7 @@
        "[2149378 rows x 13 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +794,7 @@
        "Name: label, Length: 2149378, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1047,7 +1047,7 @@
        "[2149378 rows x 10 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1059,42 +1059,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'0hkxAENNrJ18AzHqync5n3'"
+       "Index(['audio_feats_danceability', 'audio_feats_energy',\n",
+       "       'audio_feats_loudness', 'audio_feats_speechiness',\n",
+       "       'audio_feats_acousticness', 'audio_feats_instrumentalness',\n",
+       "       'audio_feats_liveness', 'audio_feats_valence', 'audio_feats_tempo',\n",
+       "       'audio_feats_duration_ms'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "input_vector = continuous_data.iloc[192]\n",
-    "input_id = df[\"ID\"].iloc[192]\n",
-    "input_id"
+    "continuous_data.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 6.89000e-01,  2.68000e-01, -1.57220e+01,  5.05000e-01,\n",
-       "        9.23000e-01,  1.69000e-06,  3.10000e-01,  5.69000e-01,\n",
-       "        1.21202e+02,  9.10630e+04])"
+       "'4S0zagxseJHOL5ZVnTQA6X'"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# input_vector = np.array([0.601, 0.789, -6.822, 0.0328, 0.0395, 0.812, 0.114, 0.315, 137.06, 205926.0])\n",
+    "input_vector= [ 6.89000e-01,  2.68000e-01, -1.57220e+01,  5.05000e-01,9.23000e-01,  1.69000e-06,  3.10000e-01,  5.69000e-01,1.21202e+02,  9.10630e+04]\n",
+    "input_id = \"4S0zagxseJHOL5ZVnTQA6X\"\n",
+    "input_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'to_numpy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43minput_vector\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto_numpy\u001b[49m()\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute 'to_numpy'"
+     ]
     }
    ],
    "source": [
@@ -1103,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1120,7 +1145,7 @@
        "array([ 0.71516298, -2.53901098,  2.94671557])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1132,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1147,7 +1172,7 @@
        "       [ 5.36735658e+00,  1.08679701e+00,  3.64164611e-03]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1159,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1168,7 +1193,7 @@
        "array([20])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1180,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1191,7 +1216,7 @@
        "       '61OLOsYMI9PuUftr0muz28', '18o37lczunBF67BRPMBO64'], dtype=object)"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1204,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1216,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1227,7 +1252,7 @@
        " array([   0, 5296, 4451, ..., 4481, 4800,  258], dtype=int64))"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1238,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1251,7 +1276,7 @@
        "        11728], dtype=int64))"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1262,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1271,7 +1296,7 @@
        "0"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1284,7 +1309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1297,7 +1322,7 @@
        "          3768]], dtype=int64))"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1308,7 +1333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1326,7 +1351,7 @@
        " '5CCqKsYBlnkXVET3OMccJf']"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1345,7 +1370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1363,7 +1388,7 @@
        " '54Ax1ooNyhTER5bR2JmzqG']"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1381,7 +1406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1399,7 +1424,7 @@
        " '54Ax1ooNyhTER5bR2JmzqG']"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
